[b] 13: Contact Us: Fix spacing bw title & content
https://trello.com/c/lAUqJL0H

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -318,9 +318,20 @@ header {
 }
 
 // Contact
-#contact .fa {
-    color: $theme-dark;
-    font-size: 2.5em;
+#contact {
+    .fa {
+        color: $theme-dark;
+        font-size: 2.5em;
+    }
+
+    .contact-links {
+        margin-top: 1.25rem;
+
+        .contact-icon-link p {
+            margin-top: 0.8rem;
+            margin-bottom: 2.5rem;
+        }
+    }
 }
 
 // Extras
